--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+dlm-lector==1.0.0
+feedparser==6.0.8
 google-api-core==1.26.2
-google-api-python-client==2.0.2
+google-api-python-client==2.3.0
 google-auth==1.28.0
 google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.3
+google-auth-oauthlib==0.4.4
 googleapis-common-protos==1.53.0
 httplib2==0.19.0
 idna==2.10
@@ -15,11 +17,15 @@ pkg-resources==0.0.0
 protobuf==3.15.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pymongo==3.11.4
 pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+sgmllib3k==1.0.0
 six==1.15.0
 uritemplate==3.0.1
 urllib3==1.26.4
